<resources>
    <string name="app_name">Namoh </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="registration">Register</string>
    <string name="Name">Name</string>
    <string name="name_hint">First Name</string>
    <string name="lname_hint">Last Name</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="change_password_hint">New Password</string>
    <string name="change_confirm_password_hint">New Confirm Password</string>
    <string name="contactnumber_hint">Mobile Number</string>
    <string name="email_hint">Email-Id or Mobile Number</string>
    <string name="Email">Email-Id</string>
    <string name="city_hint">City</string>
    <string name="country_hint">Visa Country </string>
    <string name="nav_tour">Tours</string>
    <string name="nav_passport">Passport</string>
    <string name="nav_visa">Visa</string>
    <string name="nav_forex">Forex</string>
    <string name="nav_insurance">Travel Insurance</string>
    <string name="nav_enq">Enquiry</string>
    <string name="nav_support">Help &amp; Support</string>
    <string name="nav_rate">Rate Us</string>
    <string name="nav_currancy">Currency Converter</string>
    <string name="nav_weather">Weather Report</string>
    <string name="nav_timezone">Timezone Converter</string>
    <string name="nav_world">World Atlas</string>
    <string name="voice_hint">Search Tour Here</string>
    <string-array name="city_array">

        <item>Ahmednagar</item>
        <item>Akola</item>
        <item>Amravati</item>
        <item>Aurangabad</item>
        <item>Beed</item>
        <item>Bhandara</item>
        <item>Buldhana</item>
        <item>Chandrapur</item>
        <item>Dhule</item>
        <item>Gadchiroli</item>
        <item>Gondia</item>
        <item>Hingoli</item>
        <item>Jalgaon</item>
        <item>Jalna</item>
        <item>Kolhapur</item>
        <item>Latur</item>
        <item>Mumbai City</item>
        <item>Nagpur</item>
        <item>Nanded</item>
        <item>Nandurbar</item>
        <item>Nashik</item>
        <item>Osmanabad</item>
        <item>Palghar</item>
        <item>Parbhani</item>
        <item>Pune</item>
        <item>Palghar</item>
        <item>Raigad</item>
        <item>Ratnagiri</item>
        <item>Sangli</item>
        <item>Satara</item>
        <item>Sindhudurg</item>
        <item>Solapur</item>
        <item>Thane</item>
        <item>Wardha</item>
        <item>Washim</item>
        <item>Yavatmal</item>
    </string-array>
    <string-array name="options_array">
        <item>Select Option</item>
        <item>Flight Booking</item>
        <item>Hotel Booking</item>
        <item>Train Booking</item>
        <item>Domestic Tour</item>
        <item>International Tour</item>
        <item>Passport</item>
        <item>Visa</item>
        <item>Forex</item>
        <item>Travel Insurance</item>
        <item>Others</item>

    </string-array>
    <string-array name="forex_array">
        <item>Select Option</item>
    </string-array>
    <string-array name="visaOptions_array">
        <item>Select Option</item>
        <item>Tourist</item>
        <item>Business</item>
        <item>Other</item>

    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabs">Tabs</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tour_international">TourInternational</string>
    <string name="title_activity_bottom">Bottom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_temp_nav">TempNav</string>
    <string name="title_activity_floting_btn">FlotingBtn</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_bottom_tab">BottomTab</string>
    <string name="internet_connection_off">Please turn on your mobile data or wifi</string>
    <string name="Filter">No Filters Available</string>
    <string name="search_no_results">No Search Results Found.\nPlease Search Again.</string>
    <string name="empty_search">Enter Search Text</string>
    <string name="search_txt">Search Destinations &amp; Tours</string>
    <string-array name="country_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas, The</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burma</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cabo Verde</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo, Democratic Republic of the</item>
        <item>Congo, Republic of the</item>
        <item>Costa Rica</item>
        <item>Cote d\'Ivoire</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Curacao</item>
        <item>Cyprus</item>
        <item>Czechia</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>East Timor (see Timor-Leste)</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Gabon</item>
        <item>Gambia, The</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Holy See</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Korea, North</item>
        <item>Korea, South</item>
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macau</item>
        <item>Macedonia</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>North Korea</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestinian Territories</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Sint Maarten</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka
    <item>Sudan</item>
    <item>Suriname</item>
    <item>Swaziland</item>
    <item>Sweden</item>
    <item>Switzerland</item>
    <item>Syria</item>
    <item>Taiwan</item></item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>


    </string-array>
    <string name="title_activity_product_desc_list">ProductDescList</string>
    <string name="invitation_title">Send App Invite Quickstart Invitation</string>
    <string name="invitation_message">Hi, download the NamohTours mobile app and earn Rs.500.</string>
    <string name="invitation_deep_link"></string>
    <string name="invitation_custom_image"></string>
    <string name="invitation_cta">Install!</string>
</resources>