<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar android:id="@+id/VisaToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">


            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Visa Enquiry"
                android:gravity="center"
                android:textSize="@dimen/filter_heading"
                android:textColor="@color/colorPrimary"

                />


            <EditText
                android:layout_marginTop="20dip"
                android:id="@+id/input_Visaname"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:maxLines="1"
                android:background="@drawable/rect_edit_text"
                android:padding="10dip"
                android:layout_marginBottom="10dip" />


            <EditText
                android:id="@+id/input_Visacontact"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/contactnumber_hint"
                android:inputType="phone"
                android:maxLines="1"
                android:background="@drawable/rect_edit_text"
                android:padding="10dip"
                android:layout_marginBottom="10dip" />

            <EditText
                android:id="@+id/input_Visaemail"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:background="@drawable/rect_edit_text"
                android:padding="10dip"
                android:layout_marginBottom="10dip" />


            <RelativeLayout
                android:id="@+id/layout_Visa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip">

                <AutoCompleteTextView

                    android:id="@+id/autoComplete_VisaCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/country_hint"
                    android:maxLines="1"
                    android:completionThreshold="1"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:dropDownAnchor="@id/layout_Visa"
                    android:background="@drawable/rect_edit_text"
                    android:padding="10dip">

                </AutoCompleteTextView>
            </RelativeLayout>


            <Spinner
                android:id="@+id/VisaOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rect_edit_text"
                android:padding="14dip"
                android:layout_marginBottom="10dip" />


            <Button
                android:id="@+id/btn_VisaSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:text="Submit"
                android:layout_marginTop="20dp"

                />


        </LinearLayout>
    </ScrollView>
</LinearLayout>


    <!--tools:context="com.namohtours.Activity.Passport"-->